shaku_derive/tests/ui/inject_non_arc.stderr
error: Found non-Arc type annotated with #[shaku(inject)]
  --> $DIR/inject_non_arc.rs:18:5
   |
18 |     dependency: Box<dyn DependencyTrait>,
   |     ^^^^^^^^^^

error: Found non-Arc type annotated with #[shaku(inject)]
  --> $DIR/inject_non_arc.rs:26:5
   |
26 |     dependency: Box<dyn DependencyTrait>,
   |     ^^^^^^^^^^
